--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
+.header{
+    font-family: 'Josefin Sans', sans-serif;
+    text-align: center;
+}
 
-body {background-color:#ff48c4;}
 
+.flavour{
+    color:#2bd1fc;
+    font-family: 'Rubik', sans-serif;
 
-.flavour{color:#2bd1fc;}
-.swiss-miss{color:#f3ea5f;}
-.electric-feel {color:#ff3f3f;}
-.jazz{color:#c04df9	;}
+}
+.swiss-miss{color:#f3ea5f}
+.electric-feel{color:#ff3f3f
+}
+.jazz{
+    color:#c04df9	;
+    font-family: 'Raleway', sans-serif;
+
+}
  
 .fon{font-family:'Times New Roman', Times, serif}
